// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`verify func: Invalid Object validated 1`] = `
Object {
  "errors": Array [
    Object {
      "errors": Array [
        Object {
          "type": 4,
        },
      ],
      "mapTo": "myString",
    },
  ],
  "hook": Object {
    "data": Object {
      "missing": "required",
      "string": "inhere",
    },
    "method": "create",
    "params": Object {},
    "path": "validateCreate",
    "type": "before",
  },
  "model": "formModel",
}
`;

exports[`verify func: get userid 1`] = `
Object {
  "id": 1,
  "myNum": 321,
  "myString": "obj",
}
`;

exports[`verify func: result of creation 1`] = `
Object {
  "id": 0,
  "myNum": 321,
  "myString": "obj",
}
`;
